--- a/lab/app/src/main/AndroidManifest.xml
+++ b/lab/app/src/main/AndroidManifest.xml
@@ -15,26 +15,36 @@
         android:theme="@style/Theme.LabLearnAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".PokedexActivity"
-            android:exported="false"
-            android:label="@string/title_activity_list"
-            android:theme="@style/Theme.LabLearnAndroid" />
-        <activity
-            android:name=".MainActivity2"
+            android:name=".MenuActivity"
             android:exported="true"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.LabLearnAndroid">
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_menu"
             android:theme="@style/Theme.LabLearnAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PokedexActivity"
+            android:exported="false"
+            android:label="@string/title_activity_list"
+            android:theme="@style/Theme.LabLearnAndroid">
+
+        </activity>
+        <activity
+            android:name=".MainActivity2"
+            android:exported="true"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/Theme.LabLearnAndroid">
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.LabLearnAndroid">
+
         </activity>
     </application>
 
