--- a/lab/app/src/main/AndroidManifest.xml
+++ b/lab/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.LabLearnAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".Utills.SharedPreferencesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_shared_preferences"
+            android:theme="@style/Theme.LabLearnAndroid" />
+        <activity
             android:name=".MenuActivity"
             android:exported="true"
             android:label="@string/title_activity_menu"
@@ -29,23 +34,17 @@
             android:name=".PokedexActivity"
             android:exported="false"
             android:label="@string/title_activity_list"
-            android:theme="@style/Theme.LabLearnAndroid">
-
-        </activity>
+            android:theme="@style/Theme.LabLearnAndroid"></activity>
         <activity
             android:name=".MainActivity2"
             android:exported="true"
             android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.LabLearnAndroid">
-
-        </activity>
+            android:theme="@style/Theme.LabLearnAndroid"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.LabLearnAndroid">
-
-        </activity>
+            android:theme="@style/Theme.LabLearnAndroid"></activity>
     </application>
 
 </manifest>
